// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox components Renders Checkbox properly 1`] = `
<button
  class="sc-dkPtRN givXCM"
>
  Test
</button>
`;

exports[`Checkbox components Renders CheckboxContainer properly 1`] = `
<div
  class="sc-gsDKAQ euextY"
>
  Test
</div>
`;

exports[`Checkbox components Renders CheckboxDiv properly 1`] = `
<div
  class="sc-bdvvtL khowFZ"
>
  Test
</div>
`;

exports[`Checkbox components Renders TextCheckBox properly 1`] = `
<label
  class="sc-hKwDye jWwVvL"
>
  Test
</label>
`;
